# MyRPCFramework

./: .gitignore  CMakeLists.txt  readme.md
include/: message.h  server_factory.h  server_handler.h
src/: client.cpp  message.cpp  server.cpp  server_handler.cpp  test_message.cpp
